--- a/AMS/Views/Home/Calendar.cshtml
+++ b/AMS/Views/Home/Calendar.cshtml
@@ -91,7 +91,7 @@
                     $("#idSummary").val('New Task');
                     $('#dlgAddTodoTask').modal('show');
                 },
-                events: @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.Select(x => new { title = x.Title, start = x.StartDate, allDay = true, textColor = "white" })))
+                events: @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.Select(x => new { title = x.Title, start = x.StartDate, allDay = true, textColor = "white", url = $"/TodoTasks/Details?id={x.Id}" })))
                 
 
             });
