--- a/AMS/Views/Shared/_sidebar-nav.cshtml
+++ b/AMS/Views/Shared/_sidebar-nav.cshtml
@@ -83,6 +83,11 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="TicketJobs" asp-action="Create">
+                        <i class="nav-icon icon-clock"></i> Ticket Job
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" asp-area="" asp-controller="Assets" asp-action="Create">
                         <i class="nav-icon fa fa-cubes"></i> Asset
                     </a>
@@ -212,6 +217,12 @@
                     </a>
                 </li>
             </ul>
+        </li>
+        <li class="divider"></li>
+        <li class="nav-item">
+            <a class="nav-link" asp-area="" asp-controller="TicketJobs" asp-action="Index">
+                <i class="nav-icon icon-clock"></i> Ticket Jobs
+            </a>
         </li>
         <li class="divider"></li>
         <li class="nav-item nav-dropdown">
