--- a/AMS/Views/Assets/Index.cshtml
+++ b/AMS/Views/Assets/Index.cshtml
@@ -21,7 +21,11 @@
                 <i class="fa fa-align-justify"></i> Assets
             </div>
             <div class="card-body">
-
+                <div class="mb-1">
+                    <a asp-action="Create" class="btn btn-primary">
+                        Add Asset
+                    </a>
+                </div>
                 <table id="table"
                        data-search="true"
                        data-pagination="true"
@@ -63,7 +67,7 @@
                                     @Html.DisplayFor(modelItem => item.Name)
                                 </td>
                                 <td>
-                                   <a class="btn-link" asp-action="Details" asp-route-id="@item.Id">@item.Code</a>
+                                    <a class="btn-link" asp-action="Details" asp-route-id="@item.Id">@item.Code</a>
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Client.Name)
@@ -89,7 +93,7 @@
                         }
                     </tbody>
                 </table>
-                
+
             </div>
         </div>
     </div>
