--- a/AMS/Views/Assignments/Index.cshtml
+++ b/AMS/Views/Assignments/Index.cshtml
@@ -21,7 +21,11 @@
                 <i class="fa fa-align-justify"></i> Assignments
             </div>
             <div class="card-body">
-
+                <div class="mb-1">
+                    <a asp-action="Create" class="btn btn-primary">
+                        Add Assignment
+                    </a>
+                </div>
                 <table id="table"
                        data-search="true"
                        data-pagination="true"
