--- a/AMS/Views/Members/Index.cshtml
+++ b/AMS/Views/Members/Index.cshtml
@@ -20,7 +20,11 @@
                 <i class="fa fa-align-justify"></i> User Group Members
             </div>
             <div class="card-body">
-
+                <div class="mb-1">
+                    <a asp-action="Create" class="btn btn-primary">
+                        Add Member
+                    </a>
+                </div>
                 <table id="table"
                        data-search="true"
                        data-pagination="true"
@@ -64,7 +68,7 @@
                         }
                     </tbody>
                 </table>
-                
+
             </div>
         </div>
     </div>
