--- a/AMS/Views/Tenants/Index.cshtml
+++ b/AMS/Views/Tenants/Index.cshtml
@@ -20,7 +20,11 @@
                 <i class="fa fa-align-justify"></i> Tenants
             </div>
             <div class="card-body">
-
+                <div class="mb-1">
+                    <a asp-action="Create" class="btn btn-primary">
+                        Add Tenant
+                    </a>
+                </div>
                 <table id="table"
                        data-search="true"
                        data-pagination="true"
@@ -52,7 +56,7 @@
                         }
                     </tbody>
                 </table>
-                
+
             </div>
         </div>
     </div>
