--- a/AMS/Views/TicketJobs/Index.cshtml
+++ b/AMS/Views/TicketJobs/Index.cshtml
@@ -21,7 +21,11 @@
                 <i class="icon-clock"></i> Ticket Jobs
             </div>
             <div class="card-body">
-
+                <div class="mb-1">
+                    <a asp-action="Create" class="btn btn-primary">
+                        Add Ticket Job
+                    </a>
+                </div>
                 <table id="table"
                        data-search="true"
                        data-pagination="true"
