--- a/AMS/Views/Tickets/Index.cshtml
+++ b/AMS/Views/Tickets/Index.cshtml
@@ -20,7 +20,11 @@
                 <i class="fa fa-align-justify"></i> Tickets
             </div>
             <div class="card-body">
-
+                <div class="mb-1">
+                    <a asp-action="Create" class="btn btn-primary">
+                        Add Ticket
+                    </a>
+                </div>
                 <table id="table"
                        data-search="true"
                        data-pagination="true"
@@ -64,40 +68,40 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
-                        <tr>
-                            <td>
-                                <a asp-action="Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Code)</a>
-                            </td>
+                            <tr>
+                                <td>
+                                    <a asp-action="Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Code)</a>
+                                </td>
 
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Summary)
-                            </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Summary)
+                                </td>
 
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Status)
-                            </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Status)
+                                </td>
 
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DueDate)
-                            </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.DueDate)
+                                </td>
 
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Client.Name)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TicketType.Name)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Location.Name)
-                            </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Client.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TicketType.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Location.Name)
+                                </td>
 
-                            <td>
+                                <td>
 
-                                <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
-                                <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
-                                <a class="btn-sm btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
-                            </td>
-                        </tr>
+                                    <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
+                                    <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
+                                    <a class="btn-sm btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
+                                </td>
+                            </tr>
                         }
                     </tbody>
                 </table>
