--- a/AMS/Views/Members/Index.cshtml
+++ b/AMS/Views/Members/Index.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="card-body">
                 <div class="mb-1">
-                    <a asp-action="Create" class="btn btn-primary">
+                    <a asp-action="Create" asp-route-userGroupId="@ViewBag.FilterUserGroupId" class="btn btn-primary">
                         Add Member
                     </a>
                 </div>
