--- a/AMS/Views/My/UserGroups.cshtml
+++ b/AMS/Views/My/UserGroups.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<AMS.Models.UserGroup>
 
 @{
-    ViewData["Title"] = "User Groups";
+    ViewData["Title"] = "My User Groups";
 }
 
 
@@ -18,16 +18,9 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header">
-                <i class="fa fa-align-justify"></i> User Groups
+                <i class="fa fa-align-justify"></i> My User Groups (@Model.Count())
             </div>
             <div class="card-body">
-                <div class="mb-1">
-                    <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#add-modal" data-url="@Url.Action("Add")">
-                        Add User Group
-                    </button>
-                    <!-- Modal placeholder -->
-                    <div id="modal-placeholder"></div>
-                </div>
                 <table id="table"
                        data-search="true"
                        data-pagination="true"
@@ -51,12 +44,7 @@
                                     @Html.DisplayFor(modelItem => item.Name)
                                 </td>
                                 <td>
-                                    <a class="btn-sm text-white btn-info mx-1" asp-controller="Members" asp-action="Index" asp-route-userGroupId="@item.Id"><i class="fa fa-users mx-1"></i>Members</a>
-                                    <a class="btn-sm text-white btn-info mx-1" asp-controller="Tickets" asp-action="Index" asp-route-userGroupId="@item.Id"><i class="fa fa-exclamation-circle mx-1"></i>Tickets</a>
-                                    <a class="btn-sm text-white btn-info mx-1" asp-controller="TodoTasks" asp-action="Index" asp-route-userGroupId="@item.Id"><i class="fa fa-tasks mx-1"></i>Tasks</a>
-                                    <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
-                                    <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
-                                    <a class="btn-sm btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
+                                    <a class="btn-sm btn-secondary mx-1" asp-controller="UserGroups" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
                                 </td>
                             </tr>
                         }
