--- a/AMS/Views/Shared/_sidebar-nav.cshtml
+++ b/AMS/Views/Shared/_sidebar-nav.cshtml
@@ -47,6 +47,24 @@
                     <span class="badge badge-primary"></span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-area="" asp-controller="My" asp-action="UserGroups">
+                    <i class="nav-icon fa fa-users"></i> My User Groups
+                    <span class="badge badge-primary"></span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-area="" asp-controller="My" asp-action="Tickets">
+                    <i class="nav-icon fa fa-users"></i> My Tickets
+                    <span class="badge badge-primary"></span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-area="" asp-controller="My" asp-action="TodoTasks">
+                    <i class="nav-icon fa fa-tasks"></i> My Tasks
+                    <span class="badge badge-primary"></span>
+                </a>
+            </li>
             <li class="nav-title">General</li>
 
             <li class="nav-item">
