--- a/AMS/Views/Shared/_user-nav.cshtml
+++ b/AMS/Views/Shared/_user-nav.cshtml
@@ -17,9 +17,9 @@
           <strong>Account</strong>
       </div>
 
-      <a class="dropdown-item" asp-controller="TodoTasks" asp-action="Index" asp-route-userId="@(user?.Id)">
-          <i class="fa fa-tasks"></i> Tasks
-          <span class="badge badge-danger">@((await userService.GetTodoTasksAsync(userId: user?.Id)).Count())</span>
+      <a class="dropdown-item" asp-area="" asp-controller="My" asp-action="TodoTasks">
+          <i class="fa fa-tasks"></i> My Tasks
+          <span class="badge badge-danger">@(await userService.GetUserTasksCount(userId: user?.Id ?? 0))</span>
       </a>
 
       <div class="dropdown-header text-center">
@@ -33,18 +33,15 @@
       <a class="dropdown-item" href="#">
           <i class="fa fa-wrench"></i> Settings
       </a>
-      <a class="dropdown-item" href="#">
+      <a class="dropdown-item" asp-area="" asp-controller="My" asp-action="UserGroups">
           <i class="fa fa-usd"></i> User Groups
-          <span class="badge badge-secondary">0</span>
+          <span class="badge badge-secondary">@(await userService.GetUserUserGroupsCount(userId: user?.Id ?? 0))</span>
       </a>
       <a class="dropdown-item" href="#">
           <i class="fa fa-file"></i> Assets
-          <span class="badge badge-primary">0</span>
+          <span class="badge badge-primary">@(await userService.GetUserAssetsCount(userId: user?.Id ?? 0))</span>
       </a>
       <div class="divider"></div>
-      <a class="dropdown-item" href="#">
-          <i class="fa fa-shield"></i> Lock Account
-      </a>
 
       <a class="dropdown-item" href="/Identity/Account/Manage/ChangePassword">
           <i class="fa fa-lock"></i> Change Password
